feat: 🎸 快捷操作ui deploy,build等按钮相关逻辑开发

--- a/src/local-resource/settings/ui/index.html
+++ b/src/local-resource/settings/ui/index.html
@@ -98,7 +98,7 @@
           </vscode-text-field>
         </vscode-data-grid-cell>
         <vscode-data-grid-cell grid-column="4" class="flex jcc">
-          <vscode-button appearance="icon">
+          <vscode-button appearance="icon" @click="()=>handleOperate(item)">
             <span class="codicon codicon-debug-start"></span>
           </vscode-button>
         </vscode-data-grid-cell>
