--- a/src/pages/credential-management/ui/index.html
+++ b/src/pages/credential-management/ui/index.html
@@ -44,7 +44,7 @@
                     <vscode-button @click="addKvPair()" appearance="icon" aria-add-item="Confirm">
                         <span class="codicon codicon-add"></span>
                     </vscode-button>
-                    <vscode-button @click="subKvPair(i)" v-if="i > 0" appearance="icon" aria-add-item="Confirm">
+                    <vscode-button @click="delKvPair(i)" v-if="i > 0" appearance="icon" aria-add-item="Confirm">
                         <span class="codicon codicon-chrome-minimize"></span>
                     </vscode-button>
                 </div>
@@ -54,20 +54,27 @@
                 <vscode-button @click="status = 'management'">返回</vscode-button>
             </div>
         </div>
-
-
     </div>
     <div v-else-if="status === 'management'" class="mt16 credential">
         <div v-for="(item, alias) in credentialAll" class="card mb16 mr16">
             <div class="card-title">
                 <span>{{ alias }}</span>
-                <vscode-button class="delete-btn" @click="deleteCredential(alias)" appearance="icon" aria-add-item="Confirm">
-                    <span class="codicon codicon-chrome-close"></span>
-                </vscode-button>
+                <div class="btns">
+                    <vscode-button class="hide-btn" @click="updateHideStatus(alias)" appearance="icon" aria-add-item="Confirm">
+                        <span class="codicon" :class="{'codicon-eye-closed': !statusTable[alias],'codicon-eye': statusTable[alias]}"></span>
+                    </vscode-button>
+                    <vscode-button class="delete-btn" @click="deleteCredential(alias)" appearance="icon" aria-add-item="Confirm">
+                        <span class="codicon codicon-chrome-close"></span>
+                    </vscode-button>
+                </div>
+
             </div>
             <vscode-divider></vscode-divider>
-            <div class="card-body">
+            <div class="card-body" v-if="statusTable[alias]">
                 <span class="info" v-for="(value, key) in item">{{ key }}:{{ value }}</span>
+            </div>
+            <div class="card-body" v-if="!statusTable[alias]">
+                <span class="info" v-for="(value, key) in item">{{ key }}:{{ mark(value) }}</span>
             </div>
         </div>
         <div class="card">
